Parellel processing done

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,16 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - EMBEDDING_MODEL=${EMBEDDING_MODEL:-text-embedding-3-small}
       - EMBEDDING_DIMENSIONS=${EMBEDDING_DIMENSIONS:-1536}
-      - CHUNK_SIZE=${CHUNK_SIZE:-1000}
-      - CHUNK_OVERLAP=${CHUNK_OVERLAP:-200}
-      - MAX_CHUNKS_PER_QUERY=${MAX_CHUNKS_PER_QUERY:-5}
+      - CHUNK_SIZE=${CHUNK_SIZE:-2000}
+      - CHUNK_OVERLAP=${CHUNK_OVERLAP:-400}
+      - MAX_CHUNKS_PER_QUERY=${MAX_CHUNKS_PER_QUERY:-20}
+      - EMBEDDING_BATCH_SIZE=${EMBEDDING_BATCH_SIZE:-500}
+      - PARALLEL_BATCHES=${PARALLEL_BATCHES:-10}
+      - MAX_SECTIONS_PER_QUERY=${MAX_SECTIONS_PER_QUERY:-5}
+      - ENABLE_HIERARCHICAL_PROCESSING=${ENABLE_HIERARCHICAL_PROCESSING:-true}
+      - LARGE_DOCUMENT_THRESHOLD=${LARGE_DOCUMENT_THRESHOLD:-100000}
+      - ENABLE_DOCUMENT_CACHE=${ENABLE_DOCUMENT_CACHE:-true}
+      - CACHE_EXPIRY_HOURS=${CACHE_EXPIRY_HOURS:-24}
       - PYTHONPATH=/app
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
