docker file fixed

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,86 @@
-# Database Configuration
+# ==============================================================================
+# Business Document Analysis API - Environment Configuration
+# Specialized for Insurance, Legal, HR, and Compliance domains
+# ==============================================================================
+
+# Database Configuration (Optional - not currently used)
 DATABASE_URL=postgresql://user:password@localhost:5432/bajaj_finsev_db
 
+# ==============================================================================
 # API Authentication
+# ==============================================================================
 API_KEY=your_secure_api_key_here
 
-# OpenAI Configuration
+# ==============================================================================
+# AI Model Configuration
+# ==============================================================================
+
+# Google Gemini Configuration (for query enhancement)
+GOOGLE_API_KEY=your_google_api_key_here
+
+# OpenAI Configuration (main LLM - GPT-4o-mini)
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Pinecone Configuration
-PINECONE_API_KEY=your_pinecone_api_key_here
-PINECONE_INDEX_NAME=bajaj-legal-docs
+# ==============================================================================
+# Embedding Configuration
+# ==============================================================================
+EMBEDDING_MODEL=text-embedding-3-small
+EMBEDDING_DIMENSIONS=1536
+CHUNK_SIZE=2000
+CHUNK_OVERLAP=400
+MAX_CHUNKS_PER_QUERY=30
 
-# AWS Configuration (Optional - for OCR fallback)
-AWS_ACCESS_KEY_ID=your_aws_access_key_here
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
-AWS_REGION=us-east-1
+# ==============================================================================
+# Large Document Processing Configuration
+# ==============================================================================
+EMBEDDING_BATCH_SIZE=100
+PARALLEL_BATCHES=3
+MAX_SECTIONS_PER_QUERY=3
+ENABLE_HIERARCHICAL_PROCESSING=true
+LARGE_DOCUMENT_THRESHOLD=20971520
+LARGE_DOCUMENT_CHAR_THRESHOLD=500000
 
+# ==============================================================================
+# Performance Optimization
+# ==============================================================================
+ENABLE_DOCUMENT_CACHE=true
+CACHE_EXPIRY_HOURS=24
+ENABLE_STREAMING_RESPONSES=false
 
+# ==============================================================================
+# Optional Cloud Service Configuration
+# ==============================================================================
+
+# Groq Configuration (Alternative LLM - not currently used)
+# GROQ_API_KEY=your_groq_api_key_here
+
+# Pinecone Configuration (Vector DB - not currently used)  
+# PINECONE_API_KEY=your_pinecone_api_key_here
+# PINECONE_INDEX_NAME=your_index_name
+
+# AWS Configuration (OCR fallback - not currently used)
+# AWS_ACCESS_KEY_ID=your_aws_access_key
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# AWS_REGION=your_aws_region
+
+# ==============================================================================
+# Configuration Notes
+# ==============================================================================
+# 
+# Required API Keys:
+# - GOOGLE_API_KEY: For Gemini Flash (query enhancement)
+# - OPENAI_API_KEY: For GPT-4o-mini (main document analysis)
+# - API_KEY: For API authentication (generate a secure random string)
+#
+# Performance Tuning:
+# - MAX_CHUNKS_PER_QUERY: Increase for more context, decrease for faster processing
+# - LARGE_DOCUMENT_THRESHOLD: Documents larger than this use hierarchical processing
+# - EMBEDDING_BATCH_SIZE: Reduce if experiencing API rate limits
+# - PARALLEL_BATCHES: Reduce for lower memory usage
+#
+# Business Domains Supported:
+# - Insurance: Policies, claims, coverage analysis
+# - Legal: Contracts, compliance, terms analysis  
+# - HR: Employment policies, benefits, procedures
+# - Compliance: Regulatory requirements, audit documentation
+#
