--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,16 @@ services:
       - EMBEDDING_DIMENSIONS=${EMBEDDING_DIMENSIONS:-1536}
       - CHUNK_SIZE=${CHUNK_SIZE:-2000}
       - CHUNK_OVERLAP=${CHUNK_OVERLAP:-400}
-      - MAX_CHUNKS_PER_QUERY=${MAX_CHUNKS_PER_QUERY:-20}
-      - EMBEDDING_BATCH_SIZE=${EMBEDDING_BATCH_SIZE:-500}
-      - PARALLEL_BATCHES=${PARALLEL_BATCHES:-10}
-      - MAX_SECTIONS_PER_QUERY=${MAX_SECTIONS_PER_QUERY:-5}
+      - MAX_CHUNKS_PER_QUERY=${MAX_CHUNKS_PER_QUERY:-30}
+      - EMBEDDING_BATCH_SIZE=${EMBEDDING_BATCH_SIZE:-100}
+      - PARALLEL_BATCHES=${PARALLEL_BATCHES:-3}
+      - MAX_SECTIONS_PER_QUERY=${MAX_SECTIONS_PER_QUERY:-3}
       - ENABLE_HIERARCHICAL_PROCESSING=${ENABLE_HIERARCHICAL_PROCESSING:-true}
-      - LARGE_DOCUMENT_THRESHOLD=${LARGE_DOCUMENT_THRESHOLD:-100000}
+      - LARGE_DOCUMENT_THRESHOLD=${LARGE_DOCUMENT_THRESHOLD:-20971520}
+      - LARGE_DOCUMENT_CHAR_THRESHOLD=${LARGE_DOCUMENT_CHAR_THRESHOLD:-500000}
       - ENABLE_DOCUMENT_CACHE=${ENABLE_DOCUMENT_CACHE:-true}
       - CACHE_EXPIRY_HOURS=${CACHE_EXPIRY_HOURS:-24}
+      - ENABLE_STREAMING_RESPONSES=${ENABLE_STREAMING_RESPONSES:-false}
       - PYTHONPATH=/app
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
