production error fix

--- a/requirements.txt
+++ b/requirements.txt
@@ -130,6 +130,8 @@ protobuf==5.29.5
     #   googleapis-common-protos
     #   grpcio-status
     #   proto-plus
+psutil==7.0.0
+    # via -r requirements.in
 pyasn1==0.6.1
     # via
     #   pyasn1-modules
