--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,13 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
---extra-index-url https://download.pytorch.org/whl/cpu
-
-aiofiles==24.1.0
-    # via -r requirements.in
 aiohappyeyeballs==2.6.1
     # via aiohttp
 aiohttp==3.12.14
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   fsspec
+    #   langchain-community
 aiosignal==1.4.0
     # via aiohttp
 annotated-types==0.7.0
@@ -22,6 +21,8 @@ anyio==4.9.0
     #   openai
     #   starlette
     #   watchfiles
+appdirs==1.4.4
+    # via ragas
 attrs==25.3.0
     # via aiohttp
 cachetools==5.5.2
@@ -30,19 +31,43 @@ certifi==2025.7.14
     # via
     #   httpcore
     #   httpx
+    #   pinecone-client
     #   requests
 charset-normalizer==3.4.2
     # via requests
 click==8.2.1
     # via uvicorn
+dataclasses-json==0.6.7
+    # via langchain-community
+datasets==4.0.0
+    # via
+    #   -r requirements.in
+    #   ragas
+dill==0.3.8
+    # via
+    #   datasets
+    #   multiprocess
+diskcache==5.6.3
+    # via ragas
 distro==1.9.0
     # via openai
 fastapi==0.116.1
     # via -r requirements.in
+filelock==3.18.0
+    # via
+    #   datasets
+    #   huggingface-hub
+    #   torch
+    #   transformers
 frozenlist==1.7.0
     # via
     #   aiohttp
     #   aiosignal
+fsspec[http]==2025.3.0
+    # via
+    #   datasets
+    #   huggingface-hub
+    #   torch
 google-ai-generativelanguage==0.6.15
     # via google-generativeai
 google-api-core[grpc]==2.25.1
@@ -67,18 +92,20 @@ googleapis-common-protos==1.70.0
     # via
     #   google-api-core
     #   grpcio-status
+greenlet==3.2.3
+    # via sqlalchemy
 grpcio==1.74.0
     # via
     #   google-api-core
     #   grpcio-status
 grpcio-status==1.71.2
     # via google-api-core
-gunicorn==23.0.0
-    # via -r requirements.in
 h11==0.16.0
     # via
     #   httpcore
     #   uvicorn
+hf-xet==1.1.5
+    # via huggingface-hub
 httpcore==1.0.9
     # via httpx
 httplib2==0.22.0
@@ -88,32 +115,146 @@ httplib2==0.22.0
 httptools==0.6.4
     # via uvicorn
 httpx==0.28.1
-    # via openai
+    # via
+    #   langsmith
+    #   openai
+httpx-sse==0.4.1
+    # via langchain-community
+huggingface-hub==0.34.3
+    # via
+    #   datasets
+    #   sentence-transformers
+    #   tokenizers
+    #   transformers
 idna==3.10
     # via
     #   anyio
     #   httpx
     #   requests
     #   yarl
+jinja2==3.1.6
+    # via torch
 jiter==0.10.0
     # via openai
 joblib==1.5.1
     # via scikit-learn
+jsonpatch==1.33
+    # via langchain-core
+jsonpointer==3.0.0
+    # via jsonpatch
+langchain==0.3.27
+    # via
+    #   langchain-community
+    #   ragas
+langchain-community==0.3.27
+    # via ragas
+langchain-core==0.3.72
+    # via
+    #   langchain
+    #   langchain-community
+    #   langchain-openai
+    #   langchain-text-splitters
+    #   ragas
+langchain-openai==0.3.28
+    # via ragas
+langchain-text-splitters==0.3.9
+    # via langchain
+langsmith==0.4.10
+    # via
+    #   langchain
+    #   langchain-community
+    #   langchain-core
 lxml==6.0.0
     # via python-docx
+markupsafe==3.0.2
+    # via jinja2
+marshmallow==3.26.1
+    # via dataclasses-json
+mpmath==1.3.0
+    # via sympy
 multidict==6.6.3
     # via
     #   aiohttp
     #   yarl
+multiprocess==0.70.16
+    # via datasets
+mypy-extensions==1.1.0
+    # via typing-inspect
+nest-asyncio==1.6.0
+    # via ragas
+networkx==3.5
+    # via torch
 numpy==2.3.2
     # via
     #   -r requirements.in
+    #   datasets
+    #   langchain-community
+    #   pandas
+    #   ragas
+    #   rank-bm25
     #   scikit-learn
     #   scipy
+    #   transformers
+nvidia-cublas-cu12==12.6.4.1
+    # via
+    #   nvidia-cudnn-cu12
+    #   nvidia-cusolver-cu12
+    #   torch
+nvidia-cuda-cupti-cu12==12.6.80
+    # via torch
+nvidia-cuda-nvrtc-cu12==12.6.77
+    # via torch
+nvidia-cuda-runtime-cu12==12.6.77
+    # via torch
+nvidia-cudnn-cu12==9.5.1.17
+    # via torch
+nvidia-cufft-cu12==11.3.0.4
+    # via torch
+nvidia-cufile-cu12==1.11.1.6
+    # via torch
+nvidia-curand-cu12==10.3.7.77
+    # via torch
+nvidia-cusolver-cu12==11.7.1.2
+    # via torch
+nvidia-cusparse-cu12==12.5.4.2
+    # via
+    #   nvidia-cusolver-cu12
+    #   torch
+nvidia-cusparselt-cu12==0.6.3
+    # via torch
+nvidia-nccl-cu12==2.26.2
+    # via torch
+nvidia-nvjitlink-cu12==12.6.85
+    # via
+    #   nvidia-cufft-cu12
+    #   nvidia-cusolver-cu12
+    #   nvidia-cusparse-cu12
+    #   torch
+nvidia-nvtx-cu12==12.6.77
+    # via torch
 openai==1.98.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   langchain-openai
+    #   ragas
+orjson==3.11.1
+    # via langsmith
 packaging==25.0
-    # via gunicorn
+    # via
+    #   datasets
+    #   huggingface-hub
+    #   langchain-core
+    #   langsmith
+    #   marshmallow
+    #   transformers
+pandas==2.3.1
+    # via datasets
+pillow==11.3.0
+    # via sentence-transformers
+pinecone-client==6.0.0
+    # via -r requirements.in
+pinecone-plugin-interface==0.0.7
+    # via pinecone-client
 propcache==0.3.2
     # via
     #   aiohttp
@@ -130,8 +271,8 @@ protobuf==5.29.5
     #   googleapis-common-protos
     #   grpcio-status
     #   proto-plus
-psutil==7.0.0
-    # via -r requirements.in
+pyarrow==21.0.0
+    # via datasets
 pyasn1==0.6.1
     # via
     #   pyasn1-modules
@@ -143,16 +284,26 @@ pydantic==2.11.7
     #   -r requirements.in
     #   fastapi
     #   google-generativeai
+    #   langchain
+    #   langchain-core
+    #   langsmith
     #   openai
     #   pydantic-settings
+    #   ragas
 pydantic-core==2.33.2
     # via pydantic
 pydantic-settings==2.10.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   langchain-community
 pymupdf==1.26.3
     # via -r requirements.in
 pyparsing==3.2.3
     # via httplib2
+python-dateutil==2.9.0.post0
+    # via
+    #   pandas
+    #   pinecone-client
 python-docx==1.2.0
     # via -r requirements.in
 python-dotenv==1.1.1
@@ -162,52 +313,125 @@ python-dotenv==1.1.1
     #   uvicorn
 python-multipart==0.0.20
     # via -r requirements.in
+pytz==2025.2
+    # via pandas
 pyyaml==6.0.2
-    # via uvicorn
+    # via
+    #   datasets
+    #   huggingface-hub
+    #   langchain
+    #   langchain-community
+    #   langchain-core
+    #   transformers
+    #   uvicorn
+ragas==0.3.0
+    # via -r requirements.in
+rank-bm25==0.2.2
+    # via -r requirements.in
+regex==2025.7.34
+    # via
+    #   tiktoken
+    #   transformers
 requests==2.32.4
     # via
-    #   -r requirements.in
+    #   datasets
     #   google-api-core
+    #   huggingface-hub
+    #   langchain
+    #   langchain-community
+    #   langsmith
+    #   requests-toolbelt
+    #   tiktoken
+    #   transformers
+requests-toolbelt==1.0.0
+    # via langsmith
 rsa==4.9.1
     # via google-auth
-ruff==0.12.5
-    # via -r requirements.in
+safetensors==0.5.3
+    # via transformers
 scikit-learn==1.7.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   sentence-transformers
 scipy==1.16.1
-    # via scikit-learn
+    # via
+    #   scikit-learn
+    #   sentence-transformers
+sentence-transformers==5.0.0
+    # via -r requirements.in
+six==1.17.0
+    # via python-dateutil
 sniffio==1.3.1
     # via
     #   anyio
     #   openai
+sqlalchemy==2.0.42
+    # via
+    #   langchain
+    #   langchain-community
 starlette==0.47.2
     # via fastapi
+sympy==1.14.0
+    # via torch
+tenacity==9.1.2
+    # via
+    #   langchain-community
+    #   langchain-core
 threadpoolctl==3.6.0
     # via scikit-learn
+tiktoken==0.9.0
+    # via
+    #   langchain-openai
+    #   ragas
+tokenizers==0.21.4
+    # via transformers
+torch==2.7.1
+    # via sentence-transformers
 tqdm==4.67.1
     # via
+    #   datasets
     #   google-generativeai
+    #   huggingface-hub
     #   openai
+    #   sentence-transformers
+    #   transformers
+transformers==4.54.1
+    # via sentence-transformers
+triton==3.3.1
+    # via torch
 typing-extensions==4.14.1
     # via
     #   aiosignal
     #   anyio
     #   fastapi
     #   google-generativeai
+    #   huggingface-hub
+    #   langchain-core
     #   openai
+    #   pinecone-client
     #   pydantic
     #   pydantic-core
     #   python-docx
+    #   sentence-transformers
+    #   sqlalchemy
     #   starlette
+    #   torch
+    #   typing-inspect
     #   typing-inspection
+typing-inspect==0.9.0
+    # via dataclasses-json
 typing-inspection==0.4.1
     # via
     #   pydantic
     #   pydantic-settings
+tzdata==2025.2
+    # via pandas
 uritemplate==4.2.0
     # via google-api-python-client
 urllib3==2.5.0
-    # via requests
+    # via
+    #   pinecone-client
+    #   requests
 uvicorn[standard]==0.35.0
     # via -r requirements.in
 uvloop==0.21.0
@@ -216,5 +440,12 @@ watchfiles==1.1.0
     # via uvicorn
 websockets==15.0.1
     # via uvicorn
+xxhash==3.5.0
+    # via datasets
 yarl==1.20.1
     # via aiohttp
+zstandard==0.23.0
+    # via langsmith
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
