--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,108 +1,50 @@
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
 events {
     worker_connections 1024;
+    use epoll;
+    multi_accept on;
 }
 
 http {
-    upstream bajajfinsev_backend {
-        server bajajfinsev-rag:8000;
-        # Add more servers for load balancing:
-        # server bajajfinsev-rag-2:8000;
-        # server bajajfinsev-rag-3:8000;
-    }
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=health:10m rate=1r/s;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log main;
 
-    # Gzip compression
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    client_max_body_size 100M;
+
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types application/json text/plain application/javascript text/css;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
-    server {
-        listen 80;
-        server_name localhost;
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
-        # Security headers
-        add_header X-Frame-Options DENY;
-        add_header X-Content-Type-Options nosniff;
-        add_header X-XSS-Protection "1; mode=block";
+    # SSL/TLS Configuration
+    ssl_session_cache shared:le_nginx_SSL:10m;
+    ssl_session_timeout 1440m;
+    ssl_session_tickets off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
 
-        # Health check endpoint (no rate limiting)
-        location /health {
-            proxy_pass http://bajajfinsev_backend/api/v1/hackrx/health;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Health check specific settings
-            proxy_connect_timeout 5s;
-            proxy_send_timeout 5s;
-            proxy_read_timeout 5s;
-        }
-
-        # API endpoints with rate limiting
-        location /api/ {
-            # Apply rate limiting
-            limit_req zone=api burst=20 nodelay;
-            
-            proxy_pass http://bajajfinsev_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Timeout settings for document processing
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 300s;
-            proxy_read_timeout 300s;
-            
-            # Buffer settings for large responses
-            proxy_buffering on;
-            proxy_buffer_size 4k;
-            proxy_buffers 8 4k;
-            proxy_busy_buffers_size 8k;
-        }
-
-        # Root endpoint
-        location / {
-            proxy_pass http://bajajfinsev_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Error pages
-        error_page 502 503 504 /50x.html;
-        location = /50x.html {
-            return 503 '{"error": "Service temporarily unavailable"}';
-            add_header Content-Type application/json;
-        }
-    }
-
-    # HTTPS configuration (uncomment and configure for production)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name your-domain.com;
-    #     
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #     
-    #     # SSL settings
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-    #     ssl_prefer_server_ciphers off;
-    #     
-    #     # Same location blocks as above
-    #     location /health { ... }
-    #     location /api/ { ... }
-    #     location / { ... }
-    # }
+    include /etc/nginx/conf.d/*.conf;
 }
