--- a/.env.example
+++ b/.env.example
@@ -64,16 +64,16 @@ RERANK_TOP_K=5
 MAX_SECTIONS_PER_QUERY=3
 
 # ==============================================================================
-# PERFORMANCE OPTIMIZATION
+# PERFORMANCE OPTIMIZATION & ACCURACY CONTROL
 # ==============================================================================
 # Enable fast mode (recommended for production)
 FAST_MODE=true
 
 # Enable cross-encoder re-ranking (slower but more accurate)
-ENABLE_RERANKING=false
+ENABLE_RERANKING=true
 
 # Maximum chunks used for answer generation
-MAX_CHUNKS_FOR_GENERATION=5
+MAX_CHUNKS_FOR_GENERATION=8
 
 # Enable parallel question processing
 PARALLEL_PROCESSING=true
@@ -86,6 +86,36 @@ QUESTION_BATCH_SIZE=10
 
 # Number of parallel batches for embedding
 PARALLEL_BATCHES=3
+
+# ==============================================================================
+# ACCURACY CONTROL SETTINGS (NEW)
+# ==============================================================================
+# Enable query enhancement for large documents
+USE_ENHANCED_QUERY=true
+
+# Use enhanced RRF algorithm for better ranking
+USE_ENHANCED_RRF=true
+
+# Apply strict relevance filtering
+USE_STRICT_FILTERING=true
+
+# Expand chunk context (slower but more context)
+ENABLE_CHUNK_EXPANSION=false
+
+# ==============================================================================
+# GENERATION SETTINGS (NEW)
+# ==============================================================================
+# Maximum tokens for answer generation (2-3 sentences)
+MAX_GENERATION_TOKENS=180
+
+# Temperature for generation (lower = more consistent)
+GENERATION_TEMPERATURE=0.05
+
+# Enforce 2-3 sentence limit
+ENFORCE_SENTENCE_LIMIT=true
+
+# Similarity threshold for vector search (higher = more precise)
+SIMILARITY_THRESHOLD=0.5
 
 # ==============================================================================
 # AI MODEL CONFIGURATION
@@ -105,10 +135,15 @@ GOOGLE_MODEL=gemini-2.0-flash-exp
 # ==============================================================================
 # VECTOR DATABASE CONFIGURATION
 # ==============================================================================
-# Path to vector database storage
-VECTOR_DB_PATH=./vector_db
+# Qdrant Vector Database (NEW - Primary)
+QDRANT_HOST=localhost
+QDRANT_PORT=6333
+QDRANT_COLLECTION_NAME=bajaj_documents
+QDRANT_API_KEY= 
+QDRANT_TIMEOUT=60
 
-# Vector database dimension (must match embedding model)
+# Legacy LanceDB (KEPT for backward compatibility)
+VECTOR_DB_PATH=./vector_db
 VECTOR_DIMENSION=1536
 
 # ==============================================================================
