--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,26 @@
 services:
+  qdrant:
+    image: qdrant/qdrant:latest 
+    container_name: qdrant-container
+    ports:
+      - "6333:6333"
+      - "6334:6334"  # gRPC port
+    volumes:
+      - qdrant_data:/qdrant/storage
+    environment:
+      - QDRANT__SERVICE__HTTP_PORT=6333
+      - QDRANT__SERVICE__GRPC_PORT=6334
+      - QDRANT__LOG_LEVEL=INFO
+    restart: unless-stopped
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
   fastapi-app:
     image: arpankumar1119/hackrx-bajaj:latest
     container_name: fastapi-app-container
@@ -7,6 +29,9 @@ services:
       - API_KEY=${API_KEY}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
+      - QDRANT_COLLECTION_NAME=bajaj_documents
       - EMBEDDING_MODEL=${EMBEDDING_MODEL:-text-embedding-3-small}
       - EMBEDDING_DIMENSIONS=${EMBEDDING_DIMENSIONS:-1536}
       - CHUNK_SIZE=${CHUNK_SIZE:-1000}
@@ -43,6 +68,8 @@ services:
     volumes:
       - embedding_cache:/tmp/embedding_cache
       - vector_db:/app/vector_db
+    depends_on:
+      - qdrant
     restart: unless-stopped
     networks:
       - app-network
@@ -86,6 +113,8 @@ volumes:
   embedding_cache:
     driver: local
   vector_db:
+    driver: local
+  qdrant_data:
     driver: local
 
 networks:
