--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,11 @@ aiohttp==3.12.14
     #   -r requirements.in
     #   fsspec
     #   langchain-community
+    #   llama-index-core
 aiosignal==1.4.0
     # via aiohttp
+aiosqlite==0.21.0
+    # via llama-index-core
 annotated-types==0.7.0
     # via pydantic
 anyio==4.9.0
@@ -27,6 +30,10 @@ appdirs==1.4.4
     # via ragas
 attrs==25.3.0
     # via aiohttp
+banks==2.2.0
+    # via llama-index-core
+beautifulsoup4==4.13.4
+    # via llama-index-readers-file
 blis==1.3.0
     # via thinc
 cachetools==5.5.2
@@ -40,16 +47,20 @@ certifi==2025.7.14
     # via
     #   httpcore
     #   httpx
+    #   llama-cloud
     #   requests
 charset-normalizer==3.4.2
     # via requests
 click==8.2.1
     # via
+    #   llama-cloud-services
     #   nltk
     #   typer
     #   uvicorn
 cloudpathlib==0.21.1
     # via weasel
+colorama==0.4.6
+    # via griffe
 confection==0.1.5
     # via
     #   thinc
@@ -60,17 +71,26 @@ cymem==2.0.11
     #   spacy
     #   thinc
 dataclasses-json==0.6.7
-    # via langchain-community
+    # via
+    #   langchain-community
+    #   llama-index-core
 datasets==4.0.0
     # via
     #   -r requirements.in
     #   ragas
+deprecated==1.2.18
+    # via
+    #   banks
+    #   llama-index-core
+    #   llama-index-instrumentation
 deprecation==2.1.0
     # via lancedb
 dill==0.3.8
     # via
     #   datasets
     #   multiprocess
+dirtyjson==1.0.8
+    # via llama-index-core
 diskcache==5.6.3
     # via ragas
 distro==1.9.0
@@ -83,6 +103,8 @@ filelock==3.18.0
     #   huggingface-hub
     #   torch
     #   transformers
+filetype==1.2.0
+    # via llama-index-core
 frozenlist==1.7.0
     # via
     #   aiohttp
@@ -91,6 +113,7 @@ fsspec[http]==2025.3.0
     # via
     #   datasets
     #   huggingface-hub
+    #   llama-index-core
     #   torch
 google-ai-generativelanguage==0.6.15
     # via google-generativeai
@@ -118,18 +141,26 @@ googleapis-common-protos==1.70.0
     #   grpcio-status
 greenlet==3.2.3
     # via sqlalchemy
+griffe==1.9.0
+    # via banks
 grpcio==1.74.0
     # via
     #   google-api-core
     #   grpcio-status
+    #   llama-index-vector-stores-qdrant
+    #   qdrant-client
 grpcio-status==1.71.2
     # via google-api-core
 h11==0.16.0
     # via
     #   httpcore
     #   uvicorn
+h2==4.2.0
+    # via httpx
 hf-xet==1.1.5
     # via huggingface-hub
+hpack==4.1.0
+    # via h2
 httpcore==1.0.9
     # via httpx
 httplib2==0.22.0
@@ -138,11 +169,14 @@ httplib2==0.22.0
     #   google-auth-httplib2
 httptools==0.6.4
     # via uvicorn
-httpx==0.28.1
+httpx[http2]==0.28.1
     # via
     #   -r requirements.in
     #   langsmith
+    #   llama-cloud
+    #   llama-index-core
     #   openai
+    #   qdrant-client
 httpx-sse==0.4.1
     # via langchain-community
 huggingface-hub==0.34.3
@@ -151,6 +185,8 @@ huggingface-hub==0.34.3
     #   sentence-transformers
     #   tokenizers
     #   transformers
+hyperframe==6.1.0
+    # via h2
 idna==3.10
     # via
     #   anyio
@@ -159,6 +195,7 @@ idna==3.10
     #   yarl
 jinja2==3.1.6
     # via
+    #   banks
     #   spacy
     #   torch
 jiter==0.10.0
@@ -199,6 +236,69 @@ langsmith==0.4.10
     #   langchain-core
 language-data==1.3.0
     # via langcodes
+llama-cloud==0.1.35
+    # via
+    #   llama-cloud-services
+    #   llama-index-indices-managed-llama-cloud
+llama-cloud-services==0.6.54
+    # via llama-parse
+llama-index==0.12.52
+    # via -r requirements.in
+llama-index-agent-openai==0.4.12
+    # via
+    #   llama-index
+    #   llama-index-program-openai
+llama-index-cli==0.4.4
+    # via llama-index
+llama-index-core==0.12.52.post1
+    # via
+    #   llama-cloud-services
+    #   llama-index
+    #   llama-index-agent-openai
+    #   llama-index-cli
+    #   llama-index-embeddings-openai
+    #   llama-index-indices-managed-llama-cloud
+    #   llama-index-llms-openai
+    #   llama-index-multi-modal-llms-openai
+    #   llama-index-program-openai
+    #   llama-index-question-gen-openai
+    #   llama-index-readers-file
+    #   llama-index-readers-llama-parse
+    #   llama-index-vector-stores-qdrant
+llama-index-embeddings-openai==0.3.1
+    # via
+    #   llama-index
+    #   llama-index-cli
+llama-index-indices-managed-llama-cloud==0.8.0
+    # via llama-index
+llama-index-instrumentation==0.4.0
+    # via llama-index-workflows
+llama-index-llms-openai==0.4.7
+    # via
+    #   llama-index
+    #   llama-index-agent-openai
+    #   llama-index-cli
+    #   llama-index-multi-modal-llms-openai
+    #   llama-index-program-openai
+    #   llama-index-question-gen-openai
+llama-index-multi-modal-llms-openai==0.5.3
+    # via llama-index
+llama-index-program-openai==0.3.2
+    # via
+    #   llama-index
+    #   llama-index-question-gen-openai
+llama-index-question-gen-openai==0.3.1
+    # via llama-index
+llama-index-readers-file==0.4.8
+    # via llama-index
+llama-index-readers-llama-parse==0.4.0
+    # via llama-index
+llama-index-vector-stores-qdrant==0.6.1
+    # via -r requirements.in
+llama-index-workflows==1.2.0
+    # via llama-index-core
+llama-parse==0.6.54
+    # via llama-index-readers-llama-parse
 lxml==6.0.0
     # via python-docx
 marisa-trie==1.2.1
@@ -227,11 +327,18 @@ murmurhash==1.0.13
 mypy-extensions==1.1.0
     # via typing-inspect
 nest-asyncio==1.6.0
-    # via ragas
+    # via
+    #   llama-index-core
+    #   ragas
 networkx==3.5
-    # via torch
+    # via
+    #   llama-index-core
+    #   torch
 nltk==3.9.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   llama-index
+    #   llama-index-core
 numpy==2.3.2
     # via
     #   -r requirements.in
@@ -239,7 +346,9 @@ numpy==2.3.2
     #   datasets
     #   lancedb
     #   langchain-community
+    #   llama-index-core
     #   pandas
+    #   qdrant-client
     #   ragas
     #   rank-bm25
     #   scikit-learn
@@ -251,6 +360,9 @@ openai==1.98.0
     # via
     #   -r requirements.in
     #   langchain-openai
+    #   llama-index-agent-openai
+    #   llama-index-embeddings-openai
+    #   llama-index-llms-openai
     #   ragas
 orjson==3.11.1
     # via langsmith
@@ -273,8 +385,18 @@ pandas==2.3.1
     # via
     #   -r requirements.in
     #   datasets
+    #   llama-index-readers-file
 pillow==11.3.0
-    # via sentence-transformers
+    # via
+    #   llama-index-core
+    #   sentence-transformers
+platformdirs==4.3.8
+    # via
+    #   banks
+    #   llama-cloud-services
+    #   llama-index-core
+portalocker==3.2.0
+    # via qdrant-client
 preshed==3.0.10
     # via
     #   spacy
@@ -295,6 +417,7 @@ protobuf==5.29.5
     #   googleapis-common-protos
     #   grpcio-status
     #   proto-plus
+    #   qdrant-client
 psutil==7.0.0
     # via -r requirements.in
 pyarrow==21.0.0
@@ -311,6 +434,7 @@ pyasn1-modules==0.4.2
 pydantic==2.11.7
     # via
     #   -r requirements.in
+    #   banks
     #   confection
     #   fastapi
     #   google-generativeai
@@ -318,8 +442,14 @@ pydantic==2.11.7
     #   langchain
     #   langchain-core
     #   langsmith
+    #   llama-cloud
+    #   llama-cloud-services
+    #   llama-index-core
+    #   llama-index-instrumentation
+    #   llama-index-workflows
     #   openai
     #   pydantic-settings
+    #   qdrant-client
     #   ragas
     #   spacy
     #   thinc
@@ -336,6 +466,8 @@ pymupdf==1.26.3
     # via -r requirements.in
 pyparsing==3.2.3
     # via httplib2
+pypdf==5.9.0
+    # via llama-index-readers-file
 python-dateutil==2.9.0.post0
     # via pandas
 python-docx==1.2.0
@@ -343,6 +475,7 @@ python-docx==1.2.0
 python-dotenv==1.1.1
     # via
     #   -r requirements.in
+    #   llama-cloud-services
     #   pydantic-settings
     #   uvicorn
 python-multipart==0.0.20
@@ -356,8 +489,13 @@ pyyaml==6.0.2
     #   langchain
     #   langchain-community
     #   langchain-core
+    #   llama-index-core
     #   transformers
     #   uvicorn
+qdrant-client==1.15.1
+    # via
+    #   -r requirements.in
+    #   llama-index-vector-stores-qdrant
 ragas==0.3.0
     # via -r requirements.in
 rank-bm25==0.2.2
@@ -375,6 +513,7 @@ requests==2.32.4
     #   langchain
     #   langchain-community
     #   langsmith
+    #   llama-index-core
     #   requests-toolbelt
     #   spacy
     #   tiktoken
@@ -410,16 +549,19 @@ sniffio==1.3.1
     # via
     #   anyio
     #   openai
+soupsieve==2.7
+    # via beautifulsoup4
 spacy==3.8.7
     # via -r requirements.in
 spacy-legacy==3.0.12
     # via spacy
 spacy-loggers==1.0.5
     # via spacy
-sqlalchemy==2.0.42
+sqlalchemy[asyncio]==2.0.42
     # via
     #   langchain
     #   langchain-community
+    #   llama-index-core
 srsly==2.5.1
     # via
     #   confection
@@ -428,12 +570,16 @@ srsly==2.5.1
     #   weasel
 starlette==0.47.2
     # via fastapi
+striprtf==0.0.26
+    # via llama-index-readers-file
 sympy==1.14.0
     # via torch
 tenacity==9.1.2
     # via
     #   langchain-community
     #   langchain-core
+    #   llama-cloud-services
+    #   llama-index-core
 thinc==8.3.6
     # via spacy
 threadpoolctl==3.6.0
@@ -441,6 +587,7 @@ threadpoolctl==3.6.0
 tiktoken==0.9.0
     # via
     #   langchain-openai
+    #   llama-index-core
     #   ragas
 tokenizers==0.21.4
     # via transformers
@@ -454,6 +601,7 @@ tqdm==4.67.1
     #   google-generativeai
     #   huggingface-hub
     #   lancedb
+    #   llama-index-core
     #   nltk
     #   openai
     #   sentence-transformers
@@ -470,11 +618,14 @@ typer==0.16.0
 typing-extensions==4.14.1
     # via
     #   aiosignal
+    #   aiosqlite
     #   anyio
+    #   beautifulsoup4
     #   fastapi
     #   google-generativeai
     #   huggingface-hub
     #   langchain-core
+    #   llama-index-core
     #   openai
     #   pydantic
     #   pydantic-core
@@ -487,7 +638,9 @@ typing-extensions==4.14.1
     #   typing-inspect
     #   typing-inspection
 typing-inspect==0.9.0
-    # via dataclasses-json
+    # via
+    #   dataclasses-json
+    #   llama-index-core
 typing-inspection==0.4.1
     # via
     #   pydantic
@@ -497,7 +650,9 @@ tzdata==2025.2
 uritemplate==4.2.0
     # via google-api-python-client
 urllib3==2.5.0
-    # via requests
+    # via
+    #   qdrant-client
+    #   requests
 uvicorn[standard]==0.35.0
     # via -r requirements.in
 uvloop==0.21.0
@@ -514,7 +669,10 @@ weasel==0.4.1
 websockets==15.0.1
     # via uvicorn
 wrapt==1.17.2
-    # via smart-open
+    # via
+    #   deprecated
+    #   llama-index-core
+    #   smart-open
 xxhash==3.5.0
     # via datasets
 yarl==1.20.1
