code to handle complex questions

--- a/.gitignore
+++ b/.gitignore
@@ -507,6 +507,8 @@ scripts/staging/
 .cursh 
 .crush/**
 .ruff**
+document_cache/
+notes.txt
 # ==============================================================================
 # NOTES:
 # 
