--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,48 +26,79 @@ services:
     container_name: fastapi-app-container
     command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --workers 1
     environment:
+      # API Keys
       - API_KEY=${API_KEY}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      
+      # Qdrant Configuration
       - QDRANT_HOST=qdrant
       - QDRANT_PORT=6333
       - QDRANT_COLLECTION_NAME=bajaj_documents
-      - EMBEDDING_MODEL=${EMBEDDING_MODEL:-text-embedding-3-small}
-      - EMBEDDING_DIMENSIONS=${EMBEDDING_DIMENSIONS:-1536}
-      - CHUNK_SIZE=${CHUNK_SIZE:-1000}
+      - QDRANT_TIMEOUT=60
+      - VECTOR_DIMENSION=1536
+      
+      # AI Models Configuration
+      - OPENAI_EMBEDDING_MODEL=${OPENAI_EMBEDDING_MODEL:-text-embedding-3-small}
+      - OPENAI_GENERATION_MODEL=${OPENAI_GENERATION_MODEL:-gpt-4o-mini}
+      - GOOGLE_MODEL=${GOOGLE_MODEL:-gemini-2.5-flash-lite}
+      
+      # Document Processing Configuration
+      - MAX_CHUNK_SIZE=${MAX_CHUNK_SIZE:-1000}
       - CHUNK_OVERLAP=${CHUNK_OVERLAP:-200}
-      - MAX_CHUNKS_PER_QUERY=${MAX_CHUNKS_PER_QUERY:-10}
-      - EMBEDDING_BATCH_SIZE=${EMBEDDING_BATCH_SIZE:-100}
-      - PARALLEL_BATCHES=${PARALLEL_BATCHES:-3}
-      - MAX_SECTIONS_PER_QUERY=${MAX_SECTIONS_PER_QUERY:-3}
-      - ENABLE_HIERARCHICAL_PROCESSING=${ENABLE_HIERARCHICAL_PROCESSING:-true}
-      - LARGE_DOCUMENT_THRESHOLD=${LARGE_DOCUMENT_THRESHOLD:-20971520}
-      - LARGE_DOCUMENT_CHAR_THRESHOLD=${LARGE_DOCUMENT_CHAR_THRESHOLD:-500000}
-      - ENABLE_DOCUMENT_CACHE=${ENABLE_DOCUMENT_CACHE:-true}
-      - CACHE_EXPIRY_HOURS=${CACHE_EXPIRY_HOURS:-24}
-      - ENABLE_STREAMING_RESPONSES=${ENABLE_STREAMING_RESPONSES:-false}
+      - MAX_DOCUMENT_SIZE_MB=${MAX_DOCUMENT_SIZE_MB:-100}
+      
+      # Document Caching Configuration
+      - ENABLE_PERSISTENT_DOCUMENT_CACHE=${ENABLE_PERSISTENT_DOCUMENT_CACHE:-true}
+      - DOCUMENT_CACHE_PATH=/app/document_cache
+      - DOCUMENT_CACHE_TTL_HOURS=${DOCUMENT_CACHE_TTL_HOURS:-168}
+      - CHECK_VECTOR_DB_BEFORE_DOWNLOAD=${CHECK_VECTOR_DB_BEFORE_DOWNLOAD:-true}
+      - SKIP_DUPLICATE_DOCUMENTS=${SKIP_DUPLICATE_DOCUMENTS:-true}
+      - DOCUMENT_HASH_ALGORITHM=${DOCUMENT_HASH_ALGORITHM:-sha256}
+      
+      # Performance Configuration
       - FAST_MODE=${FAST_MODE:-true}
       - ENABLE_RERANKING=${ENABLE_RERANKING:-false}
       - MAX_CHUNKS_FOR_GENERATION=${MAX_CHUNKS_FOR_GENERATION:-5}
+      - USE_ENHANCED_QUERY=${USE_ENHANCED_QUERY:-true}
+      - USE_ENHANCED_RRF=${USE_ENHANCED_RRF:-true}
+      
+      # Enhanced Question Processing (NEW)
+      - ENABLE_QUESTION_DECOMPOSITION=${ENABLE_QUESTION_DECOMPOSITION:-true}
+      - COMPLEX_QUESTION_MAX_TOKENS=${COMPLEX_QUESTION_MAX_TOKENS:-250}
+      - FAST_COMPLEX_QUESTIONS=${FAST_COMPLEX_QUESTIONS:-true}
+      - ENABLE_QUERY_ENHANCEMENT=${ENABLE_QUERY_ENHANCEMENT:-true}
+      
+      # Parallel Processing Configuration
       - PARALLEL_PROCESSING=${PARALLEL_PROCESSING:-true}
       - MAX_PARALLEL_QUESTIONS=${MAX_PARALLEL_QUESTIONS:-40}
       - QUESTION_BATCH_SIZE=${QUESTION_BATCH_SIZE:-10}
-      - TOP_K_RETRIEVAL=${TOP_K_RETRIEVAL:-10}
-      - RERANK_TOP_K=${RERANK_TOP_K:-5}
-      - OPENAI_GENERATION_MODEL=${OPENAI_GENERATION_MODEL:-gpt-4o-mini}
-      - OPENAI_MAX_TOKENS=${OPENAI_MAX_TOKENS:-4000}
-      - OPENAI_TEMPERATURE=${OPENAI_TEMPERATURE:-0.1}
-      - GOOGLE_MODEL=${GOOGLE_MODEL:-gemini-2.0-flash-exp}
-      - VECTOR_DB_PATH=${VECTOR_DB_PATH:-./vector_db}
-      - MAX_DOCUMENT_SIZE_MB=${MAX_DOCUMENT_SIZE_MB:-100}
+      
+      # Retrieval Configuration
+      - TOP_K_RETRIEVAL=${TOP_K_RETRIEVAL:-20}
+      - RERANK_TOP_K=${RERANK_TOP_K:-10}
+      - SIMILARITY_THRESHOLD=${SIMILARITY_THRESHOLD:-0.1}
+      
+      # Generation Configuration
+      - MAX_GENERATION_TOKENS=${MAX_GENERATION_TOKENS:-180}
+      - GENERATION_TEMPERATURE=${GENERATION_TEMPERATURE:-0.05}
+      
+      # Hybrid Search Configuration
+      - DENSE_WEIGHT=${DENSE_WEIGHT:-0.7}
+      - SPARSE_WEIGHT=${SPARSE_WEIGHT:-0.3}
+      
+      # System Configuration
       - PYTHONPATH=/app
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
+      - TOKENIZERS_PARALLELISM=false
+      
     expose:
       - "8000"
     volumes:
       - embedding_cache:/tmp/embedding_cache
       - vector_db:/app/vector_db
+      - document_cache:/app/document_cache
     depends_on:
       - qdrant
     restart: unless-stopped
@@ -115,6 +146,8 @@ volumes:
   vector_db:
     driver: local
   qdrant_data:
+    driver: local
+  document_cache:
     driver: local
 
 networks:
