asyncio leak fix

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,10 @@ COMPLEX_QUESTION_MAX_TOKENS=250
 FAST_COMPLEX_QUESTIONS=true
 ENABLE_QUERY_ENHANCEMENT=true
 
+# Parallel Processing Control (NEW)
+MAX_CONCURRENT_OPERATIONS=15
+SUPPRESS_MULTIPROCESSING_WARNINGS=false
+
 # Parallel Processing Configuration
 PARALLEL_PROCESSING=true
 MAX_PARALLEL_QUESTIONS=40
