--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
       - PARALLEL_PROCESSING=${PARALLEL_PROCESSING:-true}
       - MAX_PARALLEL_QUESTIONS=${MAX_PARALLEL_QUESTIONS:-40}
       - QUESTION_BATCH_SIZE=${QUESTION_BATCH_SIZE:-10}
+      - MAX_CONCURRENT_OPERATIONS=${MAX_CONCURRENT_OPERATIONS:-15}
       
       # Retrieval Configuration
       - TOP_K_RETRIEVAL=${TOP_K_RETRIEVAL:-20}
