Big brain works:.infix

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 aiofiles==24.1.0
     # via -r requirements.in
 aiohappyeyeballs==2.6.1
