--- a/nginx/sites-available/llmnow.dev.conf
+++ b/nginx/sites-available/llmnow.dev.conf
@@ -2,6 +2,10 @@ upstream fastapi {
     server fastapi-app-container:8000;
 }
 
+upstream challenge_solver {
+    server challenge-solver-container:8004;
+}
+
 server {
     listen 80;
     server_name llmnow.dev www.llmnow.dev;
@@ -36,6 +40,11 @@ server {
     # Block common vulnerability scanners
     location ~* /(wp-admin|wp-login|setup-config|cgi-bin|phpmyadmin|pma|luci) {
         return 444;
+    }
+
+    # Challenge Solver API (for direct access if needed)
+    location /challenge/ {
+        proxy_pass http://challenge_solver/;
     }
 
     # Specific location for the API endpoint to only allow POST
