--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
 services:
-  qdrant:
-    image: qdrant/qdrant:latest 
-    container_name: qdrant-container
-    ports:
-      - "6333:6333"
-      - "6334:6334"  # gRPC port
-    volumes:
-      - qdrant_data:/qdrant/storage
+  challenge-solver:
+    image: arpankumar1119/hackrx-bajaj:latest
+    container_name: challenge-solver-container
+    command: python3 mcp_servers/challenge_solver.py 8004
     environment:
-      - QDRANT__SERVICE__HTTP_PORT=6333
-      - QDRANT__SERVICE__GRPC_PORT=6334
-      - QDRANT__LOG_LEVEL=INFO
+      # System Configuration
+      - PYTHONPATH=/app
+      - PYTHONUNBUFFERED=1
+      - PYTHONDONTWRITEBYTECODE=1
+    expose:
+      - "8004"
+    volumes:
+      - ./downloads:/app/downloads:ro  # Read-only access to downloads
     restart: unless-stopped
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8004/"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -31,17 +32,14 @@ services:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       
-      # Qdrant Configuration
-      - QDRANT_HOST=qdrant
-      - QDRANT_PORT=6333
-      - QDRANT_COLLECTION_NAME=bajaj_documents
-      - QDRANT_TIMEOUT=60
-      - VECTOR_DIMENSION=1536
+      # Challenge Solver Configuration
+      - CHALLENGE_SOLVER_URL=http://challenge-solver:8004
       
       # System Configuration
       - PYTHONPATH=/app
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
+      - CUDA_VISIBLE_DEVICES=0
       
     expose:
       - "8000"
@@ -49,11 +47,19 @@ services:
       - embedding_cache:/tmp/embedding_cache
       - vector_db:/app/vector_db
       - document_cache:/app/document_cache
+      - ./downloads:/app/downloads:ro  # Read-only access to downloads
     depends_on:
-      - qdrant
+      - challenge-solver
     restart: unless-stopped
     networks:
       - app-network
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/hackrx/health"]
       interval: 30s
@@ -114,8 +120,6 @@ volumes:
   embedding_cache:
     driver: local
   vector_db:
-    driver: local
-  qdrant_data:
     driver: local
   document_cache:
     driver: local
